test/files/neg/macro-invalidret-nontree.check
Macros_Test_2.scala:2: error: macro implementation has wrong shape:
 required: (c: scala.reflect.makro.Context): c.Expr[Any]
 found   : (c: scala.reflect.makro.Context): Int
type mismatch for return type : c.Expr[Any] does not conform to Int
  def foo = macro Impls.foo
                        ^
one error found
